--- a/package.json
+++ b/package.json
@@ -1,23 +1,51 @@
 {
   "name": "flashcards",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "clean": "pnpm clean:metro && pnpm clean:modules",
+    "clean:metro": "rm -rf $TMPDIR/metro-* && rm -rf $TMPDIR/haste-map-*",
+    "clean:modules": "rm -rf node_modules",
+    "reset": "pnpm clean && pnpm install",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/bottom-tabs": "^6.5.16",
+    "@react-navigation/native": "^6.1.14",
+    "@react-navigation/native-stack": "^6.9.22",
+    "buffer": "~6.0.3",
     "expo": "~53.0.9",
+    "expo-crypto": "~14.1.4",
+    "expo-dev-client": "~5.1.8",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-paper": "~5.14.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "uuid": "~11.1.0",
+    "zod": "~3.24.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~19.0.14",
+    "metro": "^0.82.3",
+    "metro-babel-transformer": "^0.82.3",
+    "metro-core": "^0.82.3",
+    "metro-runtime": "^0.82.3",
+    "metro-source-map": "^0.82.3",
+    "typescript": "^5.1.3"
   },
-  "private": true
+  "private": true,
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
