--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-navigation/bottom-tabs": "^6.5.16",
-    "@react-navigation/native": "^6.1.14",
-    "@react-navigation/native-stack": "^6.9.22",
+    "@react-navigation/bottom-tabs": "^7.3.15",
+    "@react-navigation/elements": "~2.4.4",
+    "@react-navigation/native": "^7.1.11",
+    "@react-navigation/native-stack": "^7.3.16",
     "buffer": "~6.0.3",
     "expo": "~53.0.9",
     "expo-crypto": "~14.1.4",
@@ -29,16 +30,18 @@
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.26.0",
     "react-native-paper": "~5.14.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-reanimated": "~3.6.3",
+    "react-native-safe-area-context": "5.4.1",
+    "react-native-screens": "~4.11.1",
     "uuid": "~11.1.0",
     "zod": "~3.24.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~19.0.14",
+    "@types/react-native": "~0.73.0",
     "@typescript-eslint/eslint-plugin": "~8.32.1",
     "@typescript-eslint/parser": "~8.32.1",
     "eslint": "~9.27.0",
