--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "expo-crypto": "~14.1.4",
     "expo-dev-client": "~5.1.8",
     "expo-file-system": "~18.1.10",
+    "expo-linear-gradient": "~14.1.5",
     "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.26.0",
     "react-native-paper": "~5.14.4",
-    "react-native-reanimated": "~3.6.3",
     "react-native-safe-area-context": "5.4.1",
     "react-native-screens": "~4.11.1",
     "uuid": "~11.1.0",
