--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/metro-config": "~0.20.15",
     "@types/react": "~19.0.14",
     "@types/react-native": "~0.73.0",
     "@typescript-eslint/eslint-plugin": "~8.32.1",
