--- a/ios/flashcards/Info.plist
+++ b/ios/flashcards/Info.plist
@@ -76,5 +76,7 @@
     <string>Light</string>
     <key>UIViewControllerBasedStatusBarAppearance</key>
     <false/>
+    <key>ITSAppUsesNonExemptEncryption</key>
+    <false/>
   </dict>
 </plist>
