chore: add Android versionCode for first release

--- a/app.json
+++ b/app.json
@@ -23,7 +23,8 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.hesamossanloo.flashcards",
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
