--- a/package.json
+++ b/package.json
@@ -21,19 +21,20 @@
     "@react-navigation/elements": "~2.4.4",
     "@react-navigation/native": "^7.1.11",
     "@react-navigation/native-stack": "^7.3.16",
+    "babel-preset-expo": "~13.0.0",
     "buffer": "~6.0.3",
-    "expo": "~53.0.9",
+    "expo": "~53.0.13",
     "expo-crypto": "~14.1.4",
-    "expo-dev-client": "~5.1.8",
+    "expo-dev-client": "~5.2.2",
     "expo-file-system": "~18.1.10",
     "expo-linear-gradient": "~14.1.5",
     "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.2",
-    "react-native-gesture-handler": "~2.26.0",
+    "react-native": "0.79.4",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "~5.14.4",
-    "react-native-safe-area-context": "5.4.1",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "uuid": "~11.1.0",
     "zod": "~3.24.4"
@@ -42,7 +43,6 @@
     "@babel/core": "^7.20.0",
     "@expo/metro-config": "~0.20.15",
     "@types/react": "~19.0.14",
-    "@types/react-native": "~0.73.0",
     "@typescript-eslint/eslint-plugin": "~8.32.1",
     "@typescript-eslint/parser": "~8.32.1",
     "eslint": "~9.27.0",
